    bug#511811.
  * expected-results-i486-linux-gnu-libc, expected-results-i686-linux-i686:
    Add tests that fail on a Xen machine. Sigh.
  * any/local-linuxthreads-thread_self.diff: new patch to fix a warning on
    linuxthreads builds.
  * rules.d/build.mk: unset LANG to make sure testsuite errors are not
    localized.
  * debian/rules: remove *.mo file in the clean target.

  [ Clint Adams ]
  * patches/any/cvs-bz697-posix-regexec.diff: regex fix from Paolo Bonzini.
  * patches/any/cvs-bz9697-posix-regcomp.diff: regex fix from Paolo Bonzini,
    closes: #510219.
  * patches/localedata/submitted-bz9725-locale-sv_SE.diff: fix from David
    Weinehall for incorrect sv_SE date format.  closes: #489960.
  * patches/any/cvs-bz9706-nss_nss-files_files-parse.diff: unify NSS
    behavior between 32-bit and 64-bit platforms.  addresses: #483645.
  * localedata/submitted-bz9730-locale-sv_FI.diff: make sv_FI time format
    conform to that of fi_FI.  closes: #489946.
  * Rename patches/localedata/el_CY_euro.diff to
    patches/localedata/submitted-bz9731-el_CY_euro.diff.
  * Rename patches/localedata/dz_BT-collation.diff to
    patches/localedata/submitted-bz9732-dz_BT-collation.diff.

  [ Arthur Loiret ]
  * patches/any/local-nss-overflow.diff: new patch to ignore uids and gids 
    greater than UINT_MAX.  Closes: #483645.
  * patches/hppa/submitted-tsd.diff: new patch from to fix build on hppa.
    Closes: #511430.

  [ Petr Salinger ]
  * kfreebsd/local-sysdeps.diff: update to revision 2352 (from glibc-bsd).
  * add kfreebsd/local-linuxthreads29.diff: 
    update to fix build on kfreebsd architectures.

  [ Samuel Thibault ]
  * hurd-i386/cvs-resource-prio.diff: new patch to fix detection of PRIO_*
    values in some packages
  * hurd-i386/cvs-hurdsig-fix.diff: new patch to fix hurd signal FD locking.
  * hurd-i386/cvs-report-wait-fix.diff: patch from CVS instead of 
    hurd-i386/submitted-report-wait.diff.