@@ -66,6 +66,7 @@ glibc (2.9-0exp2) UNRELEASED; urgency=low
   * rules.d/build.mk: unset LANG to make sure testsuite errors are not
     localized.
   * debian/rules: remove *.mo file in the clean target.
+  * sysdeps/alpha.mk, control.in/main: use gcc-4.3 on alpha.
 
   [ Clint Adams ]
   * patches/any/cvs-bz697-posix-regexec.diff: regex fix from Paolo Bonzini.
@@ -110,7 +111,7 @@ glibc (2.9-0exp2) UNRELEASED; urgency=low
   * hurd-i386/cvs-get_pc_thunk.diff: new patch to fix missing
     __i686.get_pc_thunk.bx reference.
 
- -- Aurelien Jarno <aurel32@debian.org>  Sun, 25 Jan 2009 11:14:06 +0100
+ -- Aurelien Jarno <aurel32@debian.org>  Thu, 29 Jan 2009 16:47:14 +0100
 
 glibc (2.8+20080809-3) experimental; urgency=low
 
